# graphrox-rs

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: rust.yml
graphrox-c/: Cargo.toml  Readme.md  build.rs  gphrx.h
graphrox-c/src/: lib.rs
graphrox-py/: .gitignore  LICENSE  Readme.md  build-dlls.sh  pyproject.toml  setup.py  tests.py
graphrox-py/graphrox/: __init__.py
graphrox-rs/: Cargo.toml  Readme.md
graphrox-rs/src/: lib.rs
graphrox-rs/src/error/: mod.rs
graphrox-rs/src/graph/: compressed.rs  mod.rs  standard.rs
graphrox-rs/src/matrix/: csr_adjacency_matrix.rs  csr_square_matrix.rs  mod.rs
graphrox-rs/src/util/: mod.rs
sample-graphs/: ca-AstroPh.cgphrx  ca-HepPh.cgphrx  ca-HepPh.gphrx
scripts/: demo.py  generate_graph.py
src/: lib.rs
src/csr_matrix/: csr_adjacency_matrix.rs  csr_matrix.rs  mod.rs
src/error/: mod.rs
src/graph/: mod.rs  standard.rs
src/hasher/: mod.rs
src/matrix/: csr_adjacency_matrix.rs  csr_matrix.rs  mod.rs
src/util/: mod.rs
