[package]
name = "graphrox-c"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
build = "build.rs"

[lib]
doc = false
name = "graphrox"
crate-type = ["cdylib", "staticlib"]

[dependencies]
graphrox = { path = "../graphrox-rs" }
