[package]
name = "graphrox"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords = ["graph", "machine-learning", "approximation"]
categories = ["data-structures", "science"]

[lib]
name = "graphrox"
crate-type = ["rlib"]
