[package]
name = "graphrox"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme = "Readme.md"
keywords = ["graph", "machine-learning", "approximation"]
categories = ["data-structures", "science"]

[lib]
name = "graphrox"
crate-type = ["rlib"]
